--- a/recall/src/app/alumni/alumni.component.html
+++ b/recall/src/app/alumni/alumni.component.html
@@ -110,11 +110,11 @@
         <div class="qlink" style="padding-left: 70px;">
         <div><img height="65" src="assets/images/recall-logo.jpg" alt=""></div>        
            <p class="flinks">
-              <span class="link1">About</span>
-              <span>Chapters</span>
-              <span>Events</span>
-              <span>Gallary</span>
-              <span>Contact</span>
+              <span class="link1 spanlink">About</span>
+              <span class="spanlink">Chapters</span>
+              <span class="spanlink">Events</span>
+              <span class="spanlink">Gallary</span>
+              <span class="spanlink">Contact</span>
            </p>
            <p class="copyrighttext">Copyright © 2018 RecallVidyanikethan.</p>
            <p class="copyrighttext">All rights reserved.</p>
