--- a/recall/src/app/alumni/alumni.component.css
+++ b/recall/src/app/alumni/alumni.component.css
@@ -359,18 +359,19 @@ footer{
     font-weight: 600;
     margin-bottom: -10px;
 }
-.follow .link{
-
+.follow .fa:hover{
+    font-size: 25px;
+    color: #dc143c;
 }
 .follow .fa{
     border-radius: 3px;
     margin: 3px;
     background-color: #485461;
     color: white;
+    font-size: 20px;
+    line-height: 40px;
 }
 .qlink{
-    width: calc(100% /2);
-    display: inline-grid;
     color: white;
 }
 .qhead{
@@ -388,20 +389,42 @@ footer{
 }
 .flinks span{
     font-size: 16px;
-    padding: 0px 10px;
+    padding: 0px 5px;
     border-left: 1px solid;
 }
+ .spanlink {
+    display: inline-block;
+    text-decoration: none;
+    line-height: 13px;
+    cursor: pointer;
+}
+
+.spanlink::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 2px;
+    background: #dc143c;
+    transition: width .3s;
+}
+
+.spanlink:hover::after {
+    width: 100%;
+    cursor: pointer;
+   
+} 
+  
 .flinks .link1{
     border: none;
     padding-left: 0;
 }
 .copyrighttext{
     font-size: 14px;
-    color: black;
+    color: white;
     margin-bottom: 0;
 }
 .regno{
-    color: black;
+    color: white;
     text-align: center;
     font-size: 16px;
 }
