--- a/recall/src/app/alumni/birthdays/birthdays.component.html
+++ b/recall/src/app/alumni/birthdays/birthdays.component.html
@@ -8,23 +8,26 @@
         <div>
             <p class="bdayquote text-center">"a birth-date is a reminder to celebrate the life as well as to update the life"</p>
         </div>
+
+        <!----------------------------------------->
         <div *ngIf="todaycount>0" class="bdays">
             <div class="monthdiv">
             <h1 class="month">Today</h1>
             <hr class="hrline">
         </div>
-        
-        <div *ngFor="let eachone of birthdayToday" class="today "> 
+        <div class="todaydiv">
+        <div *ngFor="let eachone of birthdayToday" class="today"> 
             <div class="todayimage">
                 <img src={{eachone.profilepic}} alt="" height="100%" width="100%">
             </div>
             <div class="todaycontent">
                     <h1 class="name">{{eachone.Name}}</h1>
                     <h2 class="branch">{{eachone.branch}},({{eachone.yop}})</h2>
-                    <button class="wishes">{{buttondesc}}</button>
+                    <button class="wishes" (click)='wish(eachone)'>{{buttondesc}}</button>
             </div>
         </div>
         </div>
+    </div>
 
 <!-- --------------Tommorow------------ -->
 <div class="bdays" *ngIf="tommorowcount>0">
@@ -32,6 +35,7 @@
     <h1 class="month">Tommorow</h1>
     <hr class="hrline">
 </div>
+<div class="todaydiv">
 <div class="today" *ngFor="let eachone of birthdayTommorow"> 
     <div class="todayimage">
         <img src={{eachone.profilepic}} alt="" height="100%" width="100%">
@@ -42,7 +46,7 @@
             <!-- <button class="wishes">{{buttondesc}}</button> -->
     </div>
 </div>
-
+</div>
 </div>
 <!-- -------------------May--------------------------- -->
 <div class="bdays" *ngIf="birtdaythismonthcount>0">
@@ -50,12 +54,13 @@
     <h1 class="month">April</h1>
     <hr class="hrline">
 </div>
-
-<div class="today monthbday"  *ngFor="let eachone of birtdaythismonth"> 
+<div class="monthdivpics">
+<div class=" monthbday"  *ngFor="let eachone of birtdaythismonth"> 
     <div class="monthimage">
         <img src={{eachone.profilepic}} alt="" height="100%" width="100%">
     </div>
   
+</div>
 </div>
 
 
