--- a/recall/src/app/alumni/notificationcenter/notificationcenter.component.css
+++ b/recall/src/app/alumni/notificationcenter/notificationcenter.component.css
@@ -20,18 +20,56 @@
     padding: 10px;
 }
 .eachnotif{
-    padding: 20px;
+    padding: 10px;
+    padding-bottom: 5px;
+    font-size: 17px;
     border-bottom: 1px solid;
-    font-size: 20px;
-    margin-top: 10px;
-    box-shadow: 0px 10px 10px #e8e8e8;
+    font-family: sans-serif;
+    font-weight: 100;
+}
+.eachnotif:hover{
+    background-color: #B0E0E6;
+}
+.eachnotif div{
+    display: inline-block;
+    vertical-align: top;
+
+}
+.eachnotif img{
+    height: 35px;
+    margin-right: 10px;
+}
+.png{
+    width: 8%;
+}
+.mess{
+  width: 87%;
+}
+.delete{
+  width: 5%;
 }
 .close{
-    margin-top: 3px;
+
+    font-size: 15px;
+    color: black;
+  text-align: center;
+  width: 100%;
+  padding: 3px;
 }
 .back{
     background: transparent;
     border: none;
     color: #DC143C;
     margin-left: 10px;
+    float: left;
+}
+.msg{
+    text-align: center;
+    margin-top: 20%;
+    font-size: 30px;
+}
+.time{
+    font-size: 8px;
+    text-align: center;
+    margin-bottom: 0;
 }
