--- a/recall/src/styles.css
+++ b/recall/src/styles.css
@@ -76,7 +76,23 @@ label{
     width: 100%;
     overflow: hidden;
 }
+::-webkit-scrollbar {
+    width: 5px;
+}
+::-webkit-scrollbar:horizontal {
+    height: 5px;
+}
+ 
+::-webkit-scrollbar-track {
+    background-color: #ebebeb;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
 
+::-webkit-scrollbar-thumb {
+ 
+    background: #dc143c; 
+}
 .loading2{
     position: relative;
     width:40%;
