--- a/recall/src/app/admin/mailcenter/mailcenter.component.css
+++ b/recall/src/app/admin/mailcenter/mailcenter.component.css
@@ -23,16 +23,14 @@
     display: inline-block;
 }
 .recipientslist{
-    margin-left: 12.3%;
-    width: 87.7%;
-    border: 1px solid;
+    border-bottom: 1px solid darkgray;
     padding: 6px 6px;
+    margin: 0px 0px 6px 0px;
 }
 
 .email{
     border: none;
     margin: 2px 5px;
-    border-bottom: 1px solid;
 }
 .email:focus{
     border: none;
@@ -110,6 +108,12 @@
 .eachdiv{
     display: inline;
 }
+.batchno{
+    margin-left: 15px;
+    padding: 7px 0px;
+    border-bottom: 1px solid darkgray;
+    font-weight: 600;
+}
 select {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -179,7 +183,7 @@ select {
     margin-top: 5px;
     padding: 10px 10px;
     width: 100%;
-    height: 480px;  
+    height: 460px;  
     font-size: 20px;
 }
 .send{
@@ -210,20 +214,6 @@ select {
     float: right;
     transition: all 0.5s ease-in-out 0s;
 }
-/* .alert {
-    -webkit-animation: cssAnimation 5s forwards; 
-    animation: cssAnimation 5s forwards;
-}
-@keyframes cssAnimation {
-    0%   {opacity: 1;}
-    90%  {opacity: 1;}
-    100% {opacity: 0;}
-}
-@-webkit-keyframes cssAnimation {
-    0%   {opacity: 1;}
-    90%  {opacity: 1;}
-    100% {opacity: 0;}
-} */
 .eachresult{
     display: inline-block;
     vertical-align: top;
@@ -250,7 +240,21 @@ select {
     padding: 0 10px;
 }
 .close{
-    font-size: 13px;
-    margin-left: 10px;
-    line-height: 1.8;
+    font-size: 17px;
+    margin: 0px 2px 0px 6px;
+    line-height: 1.4;
+    font-weight: 100;
+}
+
+.close:before {
+    content: '\2716';
+}
+.subjecttext{
+    border: none;
+    width: 100%;
+    padding: 2px 10px;
+    border-bottom: 1px solid darkgray;
+}
+input:focus, textarea:focus, select:focus, div:focus,option:focus{
+    outline: none;
 }
