--- a/recall/src/app/admin/events/events.component.css
+++ b/recall/src/app/admin/events/events.component.css
@@ -1,10 +1,12 @@
 .infocard{
-    box-shadow: 0px 0px 5px -2px rgba(0,0,0,0.75);
-    display: inline-block;
-       background: white;
-       padding: 11px;
-       margin: 1% 15px;
-       transition: 0.5s all;
+  display: inline-block;
+    background: white;
+    width: calc(100%/4 - 2%);
+    margin: 1% 10px;
+    transition: 0.5s all;
+    border-radius: 10px;
+    box-shadow: 0 4px 20px 1px rgba(0, 0, 0, 0.06), 0 1px 4px rgba(0, 0, 0, 0.08);
+    border: 0;
    }
    .icon-rounded{
     padding: 12px 15px;
@@ -15,20 +17,23 @@
     color: white;
    }
    .count{
-       float: right;
+     display: inline-block;
        padding: 20px 27px 11px 5px;
+       line-height: 0;
    }
    .create{
     padding: 10px 15px;
    }
    .subtext{
        position: relative;
-       bottom: 7px;
+       bottom: 0px;
        color: #777777;
    }
    table
    {
        width: 100%;
+       text-align: center;
+       font-size: 14px;
    }
    .info{
     padding: 10px;
