--- a/recall/src/app/admin/mailcenter/mailcenter.component.css
+++ b/recall/src/app/admin/mailcenter/mailcenter.component.css
@@ -183,7 +183,7 @@ select {
     margin-top: 5px;
     padding: 10px 10px;
     width: 100%;
-    height: 460px;  
+    height: 360px;  
     font-size: 20px;
 }
 .send{
@@ -258,3 +258,101 @@ select {
 input:focus, textarea:focus, select:focus, div:focus,option:focus{
     outline: none;
 }
+.inbox-main{
+    
+}
+/*
+ CSS for the main interaction
+*/
+.tabset > input[type="radio"] {
+    position: absolute;
+    left: -200vw;
+  }
+  
+  .tabset .tab-panel {
+    display: none;
+  }
+  
+  .tabset > input:first-child:checked ~ .tab-panels > .tab-panel:first-child,
+  .tabset > input:nth-child(3):checked ~ .tab-panels > .tab-panel:nth-child(2),
+  .tabset > input:nth-child(5):checked ~ .tab-panels > .tab-panel:nth-child(3),
+  .tabset > input:nth-child(7):checked ~ .tab-panels > .tab-panel:nth-child(4),
+  .tabset > input:nth-child(9):checked ~ .tab-panels > .tab-panel:nth-child(5),
+  .tabset > input:nth-child(11):checked ~ .tab-panels > .tab-panel:nth-child(6) {
+    display: block;
+  }
+  
+  /*
+   Styling
+  */
+  body {
+    font: 16px/1.5em "Overpass", "Open Sans", Helvetica, sans-serif;
+    color: #333;
+    font-weight: 300;
+  }
+  
+  .tabset > label {
+    position: relative;
+    display: inline-block;
+    padding: 10px 15px 5px 15px;
+    text-align: center;
+    width: 200px;
+    margin-bottom: 0px;
+    border: 1px solid transparent;
+    border-bottom: 0;
+    cursor: pointer;
+    font-weight: 600;
+  }
+  
+  /* .tabset > label::after {
+    content: "";
+    position: absolute;
+    left: 15px;
+    bottom: 10px;
+    width: 22px;
+    height: 4px;
+    background: #8d8d8d;
+  } */
+  
+  .tabset > label:hover,
+  .tabset > input:focus + label {
+    color: #DC143C;
+  }
+  
+  .tabset > label:hover::after,
+  .tabset > input:focus + label::after,
+  .tabset > input:checked + label::after {
+    background: #06c;
+  }
+  
+  .tabset > input:checked + label {
+    border-color: #ccc;
+    border-bottom: 1px solid #fff;
+    margin-bottom: -1px;
+    border-top-right-radius: 40px;
+    /* border-top-left-radius: 40px; */
+    background: #DC143C;
+    color: white;
+  }
+  
+  .tab-panel {
+    /* padding: 30px 0; */
+    border-top: 1px solid #ccc;
+  }
+  
+  /*
+   Demo purposes only
+  */
+  *,
+  *:before,
+  *:after {
+    box-sizing: border-box;
+  }
+  
+  body {
+    padding: 30px;
+  }
+  
+  .tabset {
+    max-width: 100%;
+  }
